--- a/src/styles/scss/layout/_containers.scss
+++ b/src/styles/scss/layout/_containers.scss
@@ -94,9 +94,16 @@
 }
 
 // Full bleed (break out of container)
+// Note: This pattern can cause horizontal scroll on mobile/iOS
+// Ensure parent container has overflow-x: hidden
 .full-bleed {
-  width: 100vw;
-  margin-left: calc(50% - 50vw);
+  width: 100%;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-width: 100vw;
 }
 
 // =============================================================================
